argocd/media-server/metube/sts.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: metube
  name: metube
spec:
  replicas: 0
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: metube
  template:
    metadata:
      labels:
        app: metube
      annotations:
        backup.velero.io/backup-volumes: downloads
    spec:
      containers:
        - name: metube
          image: harbor.yanello.net/ghcr/alexta69/metube:2026.07.27@sha256:b6e945b63df6357bc16c7bfcb1b4479856b2087f6d8a5e59f0d3f4996a707e12
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              memory: 1Gi
            requests:
              cpu: 20m
              memory: 100Mi
          ports:
            - containerPort: 8081
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          volumeMounts:
            - mountPath: /downloads
              name: downloads
      restartPolicy: Always
  volumeClaimTemplates:
    - apiVersion: v1
      kind: PersistentVolumeClaim
      metadata:
        name: downloads
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: truenas-hdd
        resources:
          requests:
            storage: 100Gi
