argocd/media-server/metube/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: metube
  name: metube
spec:
  ports:
    - name: "http"
      port: 8081
      targetPort: 8081
  selector:
    app: metube
