argocd/media-server/metube/httpRoute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: metube
spec:
  parentRefs:
    - name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - metube.yanello.net
  rules:
    - backendRefs:
        - name: metube
          port: 8081
