argocd/media-server/metube/netpol.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: metube
spec:
  endpointSelector:
    matchLabels:
      app: metube
  ingress:
    - fromEntities:
        - ingress
      toPorts:
        - ports:
            - port: "8081"
              protocol: TCP
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "443"
              protocol: UDP
